--- a/Client/Style.css
+++ b/Client/Style.css
@@ -138,6 +138,12 @@ li > a {
     margin-right: 30px;
 }
 
+.li-align-modal {
+    display: inline;
+    margin-right: 30px;
+    margin-top: 10px;
+}
+
 .drop-down-item{
 
 }
@@ -155,20 +161,40 @@ li > a {
 }
 
 .Modal-Login {
-    width: 80%;
+    width: 600px;
     height: 300px;
     opacity: 1;
     background: white;
-    z-index: 1;
-    position: fixed;
-    left: 10%;
+    z-index: 2;
+    position: center;
+    left: 7%;
     opacity: 1;
     border-radius: 5%;
     -moz-border-radius: 5%;
     -webkit-border-radius: 5%;
     margin-top: 5%;
+    margin-right:auto;
+    margin-left:auto;
+     display: block;
     display: none;
     text-align: center;
+}
+
+.Modal-Signup {
+    width: 750px;
+    height: 400px;
+    opacity: 1;
+    background: white;
+    z-index: 1;
+    position: fixed;
+    left: 1%;
+    opacity: 1;
+    border-radius: 5%;
+    -moz-border-radius: 5%;
+    -webkit-border-radius: 5%;
+    margin-top: 5%;
+    display: block;
+    display: none;
 }
 
 .custom-dropdown{
@@ -215,7 +241,26 @@ li > a {
 .Modal-Login input {
     margin-top: 10px;
     width: 90%;
-    color:black;
+    color: black;
+    padding-left:5px;
+    -moz-box-shadow: 2px 2px 2px #22222222;
+    -webkit-box-shadow: 2px 2px 2px #22222222;
+    box-shadow: 2px 2px 2px #22222222;
+    border-radius: 7px;
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
+}
+
+.Modal-Signup input {
+    color: black;
+    padding-left: 5px;
+    padding-left: 5px;
+    -moz-box-shadow: 2px 2px 2px #22222222;
+    -webkit-box-shadow: 2px 2px 2px #22222222;
+    box-shadow: 2px 2px 2px #22222222;
+    border-radius: 7px;
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
 }
 
 /*...Load buffering...*/
@@ -289,5 +334,53 @@ li > a {
     to {
         bottom: 0;
         opacity: 1
+    }
+}
+
+@media screen and (max-width: 650px) {
+
+    .Modal-Signup {
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        background: white;
+        z-index: 1;
+        position: fixed;
+        margin-left: auto;
+        margin-right: auto;
+        opacity: 1;
+        border-radius: 5%;
+        -moz-border-radius: 5%;
+        -webkit-border-radius: 5%;
+        margin-top: 5%;
+        display: block;
+        display: none;
+    }
+    .li-align-modal{
+        display: block;
+        margin-top: 10px;
+    }
+        .li-align-modal input {
+            width:100%;
+        }
+
+
+    .Modal-Login {
+        width: 320px;
+        height: 300px;
+        opacity: 1;
+        background: white;
+        z-index: 1;
+        position: fixed;
+        opacity: 1;
+        border-radius: 5%;
+        -moz-border-radius: 5%;
+        -webkit-border-radius: 5%;
+        margin-top: 5%;
+        margin-left:auto;
+        margin-right:auto;
+        display: block;
+        display: none;
+        text-align: center;
     }
 }
