--- a/Client/css.css
+++ b/Client/css.css
@@ -1,3 +1,22 @@
+body {
+    /*font: 20px Montserrat, sans-serif;*/
+    line-height: 1.8;
+    color: #f5f6f7;
+    background-image: url("Assets/Images/Web bg.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.margin {
+    margin-bottom: 20px;
+    font-size: 50px;
+}
+
+
 .plainborder {
     -moz-box-shadow: 0 0 10px #777777;
     -webkit-box-shadow: 0 0 10px #777777;
@@ -40,15 +59,7 @@ container-fluid{
     -moz-box-shadow: 5px 5px 5px #777777;
     -webkit-box-shadow: 5px 5px 5px #777777;
     box-shadow: 5px 5px 5px #777777;
-    border: 4px solid;
-}
-
-.plainborder {
-    -moz-box-shadow: 0 0 10px #777777;
-    -webkit-box-shadow: 0 0 10px #777777;
-    box-shadow: 0 0 10px #777777;
-    background: white;
-    padding-bottom: 10px;
+    border: 4px solid #e9ecef;
 }
 
 .center {
@@ -153,6 +164,46 @@ container-fluid{
 
 	}
 
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 	
 
